fix cb alignment

--- a/_sass/lightbox.scss
+++ b/_sass/lightbox.scss
@@ -101,7 +101,7 @@
 .lightbox__close-icon {
     position: absolute;
     top: -15px;
-    right: -17px;
+    right: -15px;
 
     text-align: center;
     vertical-align: middle;
